--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a {
   color: inherit;
 }
 .logo {
-  margin: 2em;
+  padding: 2em;
   text-align: center;
 }
 .nav-container {
@@ -45,24 +45,24 @@ header {
 }
 h1 {
   font-size: 2rem;
-  margin-top: 2em;
+  margin-top: 3rem;
+}
+h2, h3 {
+ margin-bottom: 3rem;
+ text-align: center;
 }
 .wrapper {
   padding: 1rem 2rem;
 }
 section {
   margin-bottom: 5rem;
-  /* text-align: center; */
 }
-.services {
- display: flex;
- flex-wrap: wrap;
-}
+
 .services article {
  position: relative;
   color: white;
   background-color: var(--clr-primary);
-  margin: 3rem 0;
+  margin: 7rem 0;
   padding: 2em;
   border-radius: 25px;  
   min-height: 500px;
