change slice image

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ section {
   transform: translate(50%, 50%);
   width: 150px;
   height: 150px;
-  background-image: url("./images/slice.png");
+  background-image: url("./images/pngegg.png");
   background-size: cover;
 }
 footer {
