--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 :root {
   --clr-primary: #02111b;
 }
+html {
+ scroll-behavior: smooth;
+}
 *,
 *::before,
 *::after {
@@ -40,13 +43,13 @@ header {
   min-height: 90vh;
   background: url("./images/header.jpg");
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
   text-align: center;
   padding: 2em;
 }
 h1 {
   font-size: 2rem;
-  margin: 4rem auto 0;
+  margin: 7rem auto 0;
   max-width: 25ch;
   ;
 }
@@ -55,10 +58,14 @@ h3 {
   margin-bottom: 3rem;
   text-align: center;
 }
+h2 {
+ padding-top: 3rem;
+}
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
   padding: 1rem 2rem;
+  
 }
 section {
   margin-top: 5rem;
@@ -115,6 +122,12 @@ footer span {
  .menu {
   flex-basis: 40%;
  }
- 
+ .menu__list li {
+  flex: 0 1 33%;
+  text-align: right;
+ }
+ .menu__list :last-child {
+  margin-left: auto;
+ }
 }
 
