add transition to sticky nav

--- a/style.css
+++ b/style.css
@@ -30,10 +30,22 @@ a:hover {
   text-align: center;
 }
 .nav-container {
+  position: fixed;
+  top: 0;
+  left:0;
   width: 100%;
   margin-bottom: 1em;
   font-weight: bold;
   text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: background .25s linear;
+  z-index: 1;
+
+  
+}
+.nav-container--scrolled {
+  background-color: var(--clr-primary);
+  color: white;
 }
 .menu__list {
   display: flex;
@@ -71,6 +83,7 @@ h2 {
 section {
   margin-top: 5rem;
   margin-bottom: 5rem;
+  padding-top: 5rem;
 }
 .services-wrapper {
   display: flex;
