--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 *,
 *::before,
@@ -13,6 +14,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
+  overflow-x: hidden;
+  position: relative;
 }
 
 img {
@@ -118,6 +121,20 @@ section {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.slide-in {
+  opacity: 0;
+  transition: transform 0.4s ease-in, opacity 0.25s ease-in;
+}
+.slide-in.from-left {
+  transform: translateX(-50%);
+}
+.slide-in.from-right {
+  transform: translateX(50%);
+}
+.slide-in.active {
+  opacity: 1;
+  transform: translateX(0);
 }
 footer {
   min-height: 8vh;
